<resources>
    <string name="app_name">My Application</string>
    <string name="hello_world">Hello World</string>
    <string name="name">Karla</string>
    <string name="click_me">Click me!</string>
    <string name="dont_click_me">Dont click me!</string>
    <string name="title">Beer Types</string>
    <string name="text">texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto </string>
    <string name="beer_name">Lager</string>

    <bool name="is_true">true</bool>
    <integer name="years">27</integer>
    <string name="title_activity_intent">Intent</string>
</resources>
