<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/hello_world_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:padding="50dp"/>
    <Button
        android:id="@+id/click_me_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_me"
        android:layout_below="@id/hello_world_text"
        android:layout_toLeftOf="@id/hello_world_text"/>

    <Button
        android:id="@+id/click_me_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_click_me"
        android:layout_toRightOf="@id/click_me_1"/>
</RelativeLayout>