<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/cell_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:text="@string/title" />
        <ImageView
        android:id="@+id/image_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/imgres"
        android:layout_below="@+id/title_text" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image_1"
            android:layout_below="@+id/title_text"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/name_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lager"/>
            <TextView
                android:id="@+id/name_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Stout"
                android:layout_below="@id/name_1"
                />
            <TextView
                android:id="@+id/name_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IPA"
                android:layout_below="@id/name_2"
                />
            <TextView
                android:id="@+id/name_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Brown Ale"
                android:layout_below="@id/name_3"
                />
        </RelativeLayout>
    </RelativeLayout>
    <FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/cell_1">
    <TextView
        android:id="@+id/order_beer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>
    <Button android:id="@+id/beer_click_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_me"
        android:layout_below="@id/order_beer_text"/>
    <Button android:id="@+id/beer_click_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_click_me"
        android:layout_toRightOf="@id/beer_click_1"
        android:layout_below="@id/order_beer_text"/>
</FrameLayout>
</RelativeLayout>