<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:weightSum="1">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2">
                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Beer Types"
                    android:textSize="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.45">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/beers_types"
                            android:scaleType="fitCenter"/>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:weightSum="3">
                        <TextView
                            android:id="@+id/title_text1"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:text="Stout"
                            android:textSize="15dp"
                            android:layout_weight="1"/>
                        <TextView
                            android:id="@+id/title_text2"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:text="Brown ale"
                            android:textSize="15dp"
                            android:layout_weight="1"/>
                        <TextView
                            android:id="@+id/title_text3"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:text="IPA"
                            android:textSize="15dp"
                            android:layout_weight="1"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.35">
                <TextView
                    android:id="@+id/text_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text"
                    android:textSize="16dp"
                    android:layout_margin="7dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1">
                <TextView
                    android:id="@+id/more_images"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="More beers"
                    android:textSize="15dp"
                    android:layout_marginLeft="20dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9">
                <ImageView
                     android:id="@+id/beer_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/beer"
                    android:scaleType="fitXY"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"/>
                <TextView
                    android:id="@+id/order_beer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/beer_name"
                    android:layout_toEndOf="@id/beer_image"/>
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:id="@+id/beer_click_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_me"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:id="@+id/beer_click_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_click_me"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>